--- a/paralympics/templates/paralympics/base.html
+++ b/paralympics/templates/paralympics/base.html
@@ -29,14 +29,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">{% block proj_name %}Paralimpíadas{% endblock proj_name %}</a>
+                    <span class="navbar-brand">{% block proj_name %}Paralimpíadas{% endblock proj_name %}</span>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="{% url 'ranking' %}">Ranking</a></li>
                         <li><a href="{% url 'atletas' %}">Atletas</a></li>
-                        <li><a href="#">Eventos</a></li>
-                        <li><a href="#">Locais</a></li>
+                        {# <li><a href="#">Eventos</a></li> #}
+                        {# <li><a href="#">Locais</a></li> #}
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
