Fix: Indica quais medalhas consideradas

--- a/paralympics/templates/paralympics/atletas.html
+++ b/paralympics/templates/paralympics/atletas.html
@@ -9,7 +9,7 @@ Atletas
 <th>Nome</th>
 <th>Gênero</th>
 <th>Esporte</th>
-<th>Medalhas</th>
+<th>Medalhas (Individuais)</th>
 {% endblock cabecalho %}
 
 {% block pre %}
