--- a/paralympics/templates/paralympics/ranking.html
+++ b/paralympics/templates/paralympics/ranking.html
@@ -4,6 +4,10 @@
 Ranking dos Países
 {% endblock titulo %}
 
+{% block pre %}
+<h5 style="text-align: right">Soma das Medelhas Individuais e em Equipe</h5> 
+{% endblock pre %}
+
 {% block cabecalho %}
 <th class="col-sm-1" style="text-align: right">Colocação</th>
 <th class="col-sm-3">País</th>
