Fix: Detalhes nos templates

--- a/paralympics/templates/paralympics/atleta.html
+++ b/paralympics/templates/paralympics/atleta.html
@@ -31,7 +31,7 @@
         <h2>Dados Físicos</h2>
         
         <dl class="dl-horizontal display-2">
-            <dt>Gênero</dt>
+            <dt>Gênero:</dt>
             <dd>{{ atleta.genero }}</dd>
         
             <dt>Altura:</dt>
