--- a/paralympics/templates/paralympics/atletas.html
+++ b/paralympics/templates/paralympics/atletas.html
@@ -5,11 +5,11 @@ Atletas
 {% endblock titulo %}
 
 {% block cabecalho %}
-<th>País</th>
-<th>Nome</th>
-<th>Gênero</th>
-<th>Esporte</th>
-<th>Medalhas (Individuais)</th>
+<th class="col-sm-3">País</th>
+<th class="col-sm-3">Nome</th>
+<th class="col-sm-1">Gênero</th>
+<th class="col-sm-3">Esporte</th>
+<th class="col-sm-2">Medalhas (Individuais)</th>
 {% endblock cabecalho %}
 
 {% block pre %}
